# WorkFlow-Pro

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  playwright.config.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: qa.yml
config/: browserstack.yaml  config.yaml
config/environments/: dev.yaml  staging.yaml
docs/: architecture.md  assumptions.md  browserstack.md  case-study-submission-notes.md  ci-cd.md  execution-guide.md  flaky-test-analysis.md  framework-explanation.md  implementation-roadmap.md  interview-notes.md  missing-requirements.md  references.md  repository-structure.md  test-coverage.md  test-strategy.md
src/workflowpro_qa/: __init__.py
src/workflowpro_qa/api/: __init__.py
src/workflowpro_qa/api/clients/: auth_client.py  base_api_client.py  project_client.py
src/workflowpro_qa/browserstack/: __init__.py  capabilities.py  playwright_remote.py
src/workflowpro_qa/config/: __init__.py  settings.py
src/workflowpro_qa/fixtures/: __init__.py  api.py  auth.py  browser.py  config.py
src/workflowpro_qa/pages/: base_page.py  dashboard_page.py  login_page.py  projects_page.py
src/workflowpro_qa/utils/: __init__.py  assertions.py  helpers.py  logger.py  otp.py  retry.py
test_data/: projects.json  tenants.yaml  users.yaml
tests/api/: test_projects_api.py
tests/integration/: test_login_and_tenant_isolation_flow.py  test_project_creation_flow.py
tests/mobile/: test_mobile_project_access.py
tests/ui/: test_flaky_login_fixed_reference.py  test_login.py
(+6 files in other folders)
